# compiling_p150a

./: .gitignore  README.md  TODO.txt
baseline/kernels/dataflow/: reader_unary.cpp  writer_unary.cpp
code/: Makefile  README.md  output_macos_old  y_me_dijo_tu_mama.cpp  z_other_2.cpp
code/input/: river.HEIC  terribly_late.HEIC
code/scripts/: clear_outputs.sh  prepare_inputs.sh
code/youtube_swag/: download_youtube.py  youtube_urls.txt
compling_p150a/: README.md  README.md.bak
compling_p150a/baseline/kernels/compute/: eltwise_sfpu.cpp
compling_p150a/batch2/kernels/compute/: eltwise_sfpu.cpp
compling_p150a/compare/: CMakeLists.txt  compare_eltwise_sfpu.cpp
compling_p150a/results/: results.csv
compling_p150a/scripts/: legality_check.py  run_all.sh
playground_discrete_video/: README.md  runs_reference.txt
playground_discrete_video/scripts/: discrete_lab.py  p150a_probe.py  p150a_probe.sh
playground_discrete_video/ttnn_runtime/: ttnn
playground_discrete_video_p150a/: .gitignore  README.md
playground_discrete_video_p150a/scripts/: render_fall_p150a.py  run_fall_p150a.sh
playground_discrete_video_p150a/src/: p150a_video_renderer.py
results/: results.csv
scripts/: legality_check.py  run_all.sh  ttnn_smoke.py
